--- a/seminar.tex
+++ b/seminar.tex
@@ -10,7 +10,35 @@
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 
-\usemintedstyle{vs}
+\usemintedstyle{borland}
+
+\newenvironment{mintedblock}[1]%[3]%
+{\VerbatimEnvironment
+  % \begin{listing}[ht]
+    % \caption{#2}%
+    % \label{#1}%
+    \begin{minted}[fontsize=\small]{#1}%
+}
+{%
+    \end{minted}%
+  % \end{listing}
+}
+
+\newenvironment{rustblock}%[2]%
+{\VerbatimEnvironment
+  \begin{mintedblock}{rust}%{#1}{#2}%
+}
+{%
+  \end{mintedblock}%
+}
+
+\newenvironment{cppblock}%[2]%
+{\VerbatimEnvironment
+  \begin{mintedblock}{cpp}%{#1}{#2}%
+}
+{%
+  \end{mintedblock}%
+}
 
 \makeatletter
 \def\ps@footernumberstyle{
